# knowledge_base_mcp

./: .gitignore  README.md  SPEC.md  pyproject.toml
src/kb_mcp/: __init__.py  cli.py  config.py  main.py
src/kb_mcp/db/: __init__.py  database.py  schema.py
src/kb_mcp/db/repositories/: __init__.py  knowledge_repo.py  project_repo.py  requirement_repo.py  tag_repo.py
src/kb_mcp/mcp/: tools.py
src/kb_mcp/models/: __init__.py  knowledge.py  project.py  requirement.py  tag.py
src/kb_mcp/services/: __init__.py  knowledge_service.py  project_service.py  requirement_service.py  search_service.py
